--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .container {
-  display: grid;
-  grid-template-areas: 
-                      "h"
-                      "m"
-                      "f";
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
