--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -1,6 +1,8 @@
 .main-container {
   width: 100%;
-  grid-area: m;
+  padding-bottom: 95px;
+  overflow-y: auto;
+  margin-bottom: 50px;
 }
 .content-container {
   margin: 0 auto;
@@ -8,11 +10,16 @@
   // flex-direction: column;
   // align-items: center;
   max-width: calc(1600px - 515px * 2);
-  margin-top: 65px;
+  // margin-top: 35px;
 }
 .main-header {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 170px;
   &__title {
+    margin-bottom: 30px;
     color: #303134;
     font-size: 36px;
     font-weight: 500;
@@ -20,5 +27,52 @@
   &__description {
     font-size: 12px;
     font-weight: 600;
+  }
+}
+
+.form-container {
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  .field {
+    height: 50px;
+    background-color: #f6f9f9;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  &__input1 {
+    grid-column: 1 / 3;
+    background-color: #f6f9f9;
+  }
+  &__input2 {
+    grid-column: 1 / 3;
+  }
+  &__input3 {
+    grid-column: 1 / 3;
+  }
+  &__input4 {
+    grid-column: 1 / 3;
+  }
+  &__input5 {
+    grid-column: 1;
+  }
+  &__select1{
+    grid-column: 2;
+    padding-right: 20px;
+  }
+  &__select2 {
+    grid-column: 1;
+  }
+  &__select3 {
+    grid-column: 2;
+  }
+  .checkbox {
+    grid-column: 1 / 3;
+  }
+  .select {
+    height: 50px;
+    background-color: #f6f9f9;
   }
 }
