--- a/src/components/RequestsList.scss
+++ b/src/components/RequestsList.scss
@@ -1,6 +1,7 @@
 .requests-list {
   list-style-type: none;
   position: relative;
+  cursor: pointer;
   &__item {
     display: flex;
     flex-direction: row;
